# QCodeSitter

./: .gitignore  pyproject.toml  tox.ini
src/QCodeSitter/: __init__.py  _kickoff.py  constants.py  editor_options.py  highlight_query.py  highlights.scm  hotkey_manager.py  hotkey_ui.py  line_editor.py  line_highlighter.py  line_tracker.py  multi_cursor_manager.py  selection_manager.py  syntax_analyzer.py  tree_manager.py  utils.py
src/QCodeSitter/behaviors/: __init__.py  auto_bracket.py  code_folding.py  highlight_matching_brackets.py  highlight_matching_selection.py  smart_indent.py  syntax_highlighting.py  tab_completion.py
src/QCodeSitter/behaviors/providers/: identifiers.py
src/sumrope/: __init__.py  _kickoff.py  editor_options.py  hl_groups.py  line_document.py  line_editor.py  line_highlighter.py  line_tracker.py  multi_cursor_manager.py  multirope.py  naiive_output.txt  naive_document.py  oldcmp.py  python_higlighter.py  sumrope.py  sumrope_document.py  sumrope_rle.py  sumrope_rle_document.py  syntax_analyzer.py  tree_manager.py
src/sumrope/behaviors/: __init__.py  auto_bracket.py  code_folding.py  highlight_matching_brackets.py  highlight_matching_selection.py  line_numbers.py  smart_indent.py  syntax_highlighting.py  tab_completion.py
src/sumrope/behaviors/providers/: __init__.py  identifiers.py  main_python.py
sumrope/: multirope.py  multirope2.py  multirope_document.py  sumrope.py  sumrope_document.py
tests/: __init__.py  test_lenpair_rlegroup.py  test_sumrope.py  test_sumrope_document.py  test_syntax_analyzer.py  test_tree_manager.py
