[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sumrope"
version = "0.1.0"
description = "Dynamic sequence with efficient cumulative sums"
requires-python = ">=3.8"
dependencies = [
    "Qt.py",
    "numpy<2.0",  # <2.0 because of shiboken/sip
    "stransi",
    "tree-sitter",
    "tree-sitter-python",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
dev = [
    "tox>=4.0",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
